--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ idna==3.10
 jiter==0.9.0
 openai==1.72.0
 proto-plus==1.26.1
-protobuf==5.29.4
+protobuf>=4.21.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.6.1
