--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,11 @@ click==8.1.8
 colorama==0.4.6
 distro==1.9.0
 fastapi==0.109.2
-google-ai-generativelanguage==0.6.15
 google-api-core==2.24.2
 google-api-python-client==2.166.0
 google-auth==2.38.0
 google-auth-httplib2==0.2.0
-google-generativeai==0.3.2
+google-genai==1.10.0
 googleapis-common-protos==1.69.2
 grpcio==1.71.0
 grpcio-status==1.71.0
