--- a/requirements.txt
+++ b/requirements.txt
@@ -6,42 +6,38 @@ charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 distro==1.9.0
-fastapi==0.109.2
+fastapi==0.115.12
+google-ai-generativelanguage==0.6.15
 google-api-core==2.24.2
 google-api-python-client==2.166.0
 google-auth==2.38.0
 google-auth-httplib2==0.2.0
-google-generativeai==0.3.2
-google-ai-generativelanguage==0.4.0
+google-generativeai==0.8.4
 googleapis-common-protos==1.69.2
 grpcio==1.71.0
 grpcio-status==1.71.0
 h11==0.14.0
 httpcore==1.0.8
 httplib2==0.22.0
-httpx==0.26.0
+httpx==0.28.1
 idna==3.10
 jiter==0.9.0
 openai==1.72.0
 proto-plus==1.26.1
-protobuf>=4.21.0
+protobuf==5.29.4
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-pydantic==2.6.1
-pydantic-core==2.16.2
+pydantic==2.11.3
+pydantic_core==2.33.1
 pyparsing==3.2.3
-python-dotenv==1.0.1
-python-multipart==0.0.9
-requests==2.31.0
+python-dotenv==1.1.0
+requests==2.32.3
 rsa==4.9
 sniffio==1.3.1
+starlette==0.46.1
 tqdm==4.67.1
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 uritemplate==4.1.1
 urllib3==2.4.0
-uvicorn==0.27.1
-aiohttp==3.9.3
-asyncio==3.4.3
-python-dateutil==2.8.2
-pydantic-settings==2.2.1  # downgraded for pydantic compatibility
+uvicorn==0.34.0
